# john

./: .gitignore  README.md  pyproject.toml
scripts/: train_6p_model.sh  train_universal_model.sh
src/romanian_whist/: __init__.py
src/romanian_whist/agents/: __init__.py  baselines.py  checkpoint.py  model.py
src/romanian_whist/cli/: __init__.py  main.py
src/romanian_whist/env/: __init__.py  romanian_whist.py
src/romanian_whist/mlx_support/: __init__.py  converter.py
src/romanian_whist/rules/: __init__.py  cards.py  config.py  game.py
src/romanian_whist/train/: __init__.py  curriculum.py  eval.py  league.py  ppo.py
src/romanian_whist/web/: __init__.py  app.py  services.py
src/romanian_whist/web/static/: app.js  styles.css
src/romanian_whist/web/templates/: advisor.html  base.html  inspect.html  play.html
tests/: test_baselines.py  test_cli.py  test_env.py  test_model.py  test_rules.py  test_train.py  test_web.py
